@@ -19,6 +19,7 @@ import java.io.DataOutputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Optional;
 import java.util.UUID;
@@ -75,7 +76,7 @@ public class HeadUtils {
                 ImageIO.write(headSkin, "png", baos);
                 byte[] skin = baos.toByteArray();
 
-                URL url = new URL(MINESKIN_API + "generate/upload");
+                URL url = URI.create(MINESKIN_API + "generate/upload").toURL();
                 HttpURLConnection conn = (HttpURLConnection) url.openConnection();
                 conn.setDoOutput(true);
                 conn.setRequestProperty("User-Agent", FzmmClient.HTTP_USER_AGENT);
